Added game background and different color frogs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <div id="frog0"></div>
-
+        <img src="../assets/images/pond-background.jpg" alt="Cartoon pond background">
+        <div id="frog0"><img src="assets/images/green_froggy.png" alt="Green frog"></div>
+        <div id="frog1"><img src="assets/images/blue_froggy.png" alt="Blue frog"></div>
+        <div id="frog2"><img src="assets/images/red_froggy.png" alt="Red frog"></div>
+        <div id="frog3"><img src="assets/images/yellow_froggy.png" alt="Yellow frog"></div>
+        <div id="frog4"><img src="assets/images/pink_froggy.png" alt="Pink frog"></div>
 
     </div>
 
