--- a/index.html
+++ b/index.html
@@ -8,13 +8,46 @@
     <title>Froggy Mem</title>
 </head>
 <body>
+
+    <header>
+
+        <div class="title"><h1>Froggy Memory</h1></div>
+
+        <div class="score-box">
+
+            <div class="score">
+                <h2>Score <span id="counter">000</span></h2>
+            </div>
+
+            <div class="level">
+                <h2>Level <span id="level-count">1</span></h2>
+            </div>
+
+            <div class="lives">
+                <h2>Lives <span id="life-count">XXX</span></h2>
+            </div>
+        </div>
+    </header>
+
     <div class="container">
         <img src="../assets/images/pond-background.jpg" alt="Cartoon pond background">
-        <div id="frog0"><img src="assets/images/green_froggy.png" alt="Green frog"></div>
-        <div id="frog1"><img src="assets/images/blue_froggy.png" alt="Blue frog"></div>
-        <div id="frog2"><img src="assets/images/red_froggy.png" alt="Red frog"></div>
-        <div id="frog3"><img src="assets/images/yellow_froggy.png" alt="Yellow frog"></div>
-        <div id="frog4"><img src="assets/images/pink_froggy.png" alt="Pink frog"></div>
+        <div id="frog0" class="frog"><img src="assets/images/green_froggy.png" alt="Green frog">
+            <audio src="assets/audio/greytree-frog.mp3"></audio>
+        </div>
+        <div id="frog1" class="frog"><img src="assets/images/blue_froggy.png" alt="Blue frog">
+            <audio src="assets/audio/medium-frog.mp3"></audio>
+        </div>
+        <div id="frog2" class="frog"><img src="assets/images/red_froggy.png" alt="Red frog">     
+            <audio src="assets/audio/small-frog.mp3"></audio> 
+        </div>
+        <div id="frog4" class="frog"><img src="assets/images/pink_froggy.png" alt="Pink frog">
+
+            <audio src="assets/audio/leopard-frog.mp3"></audio> 
+        </div>
+        <div id="frog3" class="frog"><img src="assets/images/yellow_froggy.png" alt="Yellow frog">
+
+            <audio src="assets/audio/tree-frog.mp3"></audio>     
+        </div>
 
     </div>
 
