added welcome menu

--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
         <div class="score-box">
 
             <div class="score">
-                <h2>Score <span id="counter">000</span></h2>
+                <h3>Score <span id="score=count">000</span><h3>
             </div>
 
             <div class="level">
-                <h2>Level <span id="level-count">1</span></h2>
+                <h3>Level <span id="level-count">1</span><h3>
             </div>
 
             <div class="lives">
-                <h2>Lives <span id="life-count">XXX</span></h2>
+                <h3>Lives <span id="life-count">XXX</span><h3>
             </div>
         </div>
     </header>
 
     <div class="container">
+
+
+
         <img src="../assets/images/pond-background.jpg" alt="Cartoon pond background">
         <div id="frog0" class="frog"><img src="assets/images/green_froggy.png" alt="Green frog">
             <audio src="assets/audio/greytree-frog.mp3"></audio>
@@ -47,6 +50,19 @@
         <div id="frog3" class="frog"><img src="assets/images/yellow_froggy.png" alt="Yellow frog">
 
             <audio src="assets/audio/tree-frog.mp3"></audio>     
+        </div>
+
+        <!-- Welcome box -->
+        <div class="welcome-container">
+
+            <h2>Welcome to the Game!</h2>
+
+
+                <button class="btn"><h3>Play Game!</h3></button>
+
+                <button class="btn"><h3>Game Rules</h3></button>
+
+
         </div>
 
     </div>
