--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="score-box">
 
             <div class="score">
-                <h3>Score <span id="score=count">000</span><h3>
+                <h3>Score <span id="score-count">000</span><h3>
             </div>
 
             <div class="level">
@@ -58,9 +58,9 @@
             <h2>Welcome to the Game!</h2>
 
 
-                <button class="btn"><h3>Play Game!</h3></button>
+                <button class="btn" data-type="play"><h3>Play Game!</h3></button>
 
-                <button class="btn"><h3>Game Rules</h3></button>
+                <button class="btn" data-type="rules"><h3>Game Rules</h3></button>
 
 
         </div>
