added array to build random number array for Frog play sequence and function to play frogs in array order. Issue with delay inbetween sounds

--- a/index.html
+++ b/index.html
@@ -37,23 +37,25 @@
         <div id="frog0" class="frog"><img src="assets/images/green_froggy.png" alt="Green frog">
             <audio src="assets/audio/greytree-frog.mp3"></audio>
         </div>
+
         <div id="frog1" class="frog"><img src="assets/images/blue_froggy.png" alt="Blue frog">
             <audio src="assets/audio/medium-frog.mp3"></audio>
         </div>
+
         <div id="frog2" class="frog"><img src="assets/images/red_froggy.png" alt="Red frog">     
             <audio src="assets/audio/small-frog.mp3"></audio> 
         </div>
-        <div id="frog4" class="frog"><img src="assets/images/pink_froggy.png" alt="Pink frog">
 
+        <div id="frog4" class="frog"><img src="assets/images/pink_froggy.png" alt="Pink frog">
             <audio src="assets/audio/leopard-frog.mp3"></audio> 
         </div>
-        <div id="frog3" class="frog"><img src="assets/images/yellow_froggy.png" alt="Yellow frog">
 
+        <div id="frog3" class="frog"><img src="assets/images/yellow_froggy.png" alt="Yellow frog">
             <audio src="assets/audio/tree-frog.mp3"></audio>     
         </div>
 
         <!-- Welcome box -->
-        <div class="welcome-container">
+        <div id="welcome-container">
 
             <h2>Welcome to the Game!</h2>
 
