moved frog event listeners outside of runGame function to fix multiple listener bug

--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Froggy Mem</title>
+    <title>Way of the Frog!</title>
 </head>
 <body>
 
     <header>
 
-        <div class="title"><h1>Froggy Memory</h1></div>
+        <div class="title"><h1>Way of the Frog!</h1></div>
 
         <div class="score-box">
 
             <div class="score">
-                <h3>Score <span id="score-count">0</span><h3>
+                <h2>Score <span id="score-count">0</span><h2>
             </div>
 
-            <div class="level">
+            <!-- <div class="level">
                 <h3>Level <span id="level-count">1</span><h3>
             </div>
 
             <div class="lives">
                 <h3>Lives <span id="life-count">XXX</span><h3>
-            </div>
+            </div> -->
         </div>
     </header>
 
