added listen and play banners to the game

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             
             </div>
 
+        <div id="listen"><h2>Listen to the way of the frog</h2> </div>
 
+        <div id="follow"><h2>Follow the way of the frog</h2> </div>
 
         <!-- menu box -->
         <div id="menu-container">
