update of file path

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 
-        <img src="../assets/images/pond-background.jpg" alt="Cartoon pond background">
+        <img src=" assets/images/pond-background.jpg" alt="Cartoon pond background">
         <div id="frog0" class="frog"><img src="assets/images/green_froggy.png" alt="Green frog">
             <audio src="assets/audio/greytree-frog.mp3"></audio>
         </div>
