--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 
         <div id="follow"><h2>Follow the way of the frog</h2> </div>
 
+        <div id="cover"></div>
+
         <!-- menu box -->
         <div id="menu-container">
 
