--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 
     <header>
 
-        <div class="title"><h1>Way of the Frog!</h1></div>
-
-        <div class="score">
-            <h2>Score <span id="score-count">0</span><h2>
+        <div class="title">
+            <h1>Way of the Frog!</h1>
         </div>
 
 
-
+        <div id="score-container">
+            <div class="scores">
+                <h2>High Score <span id="high-score-count">0</span><h2>
+            </div>
+            <div class="scores">
+                <h2>Score <span id="score-count">0</span><h2>
+            </div>  
         </div>
+
     </header>
 
     <div class="container">
@@ -62,6 +67,8 @@
         <div id="follow"><h2>Follow the way of the frog</h2> </div>
 
         <div id="cover"></div>
+
+        <div id="game-over"></div>
 
         <!-- menu box -->
         <div id="menu-container">
