added media query

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <div id="score-container">
             <div class="scores">
-                <h2>High Score <span id="high-score-count">0</span><h2>
+                <h2>High Score <span class="counters"id="high-score-count">0</span><h2>
             </div>
             <div class="scores">
-                <h2>Score <span id="score-count">0</span><h2>
+                <h2>Score <span class="counters" id="score-count">0</span><h2>
             </div>  
         </div>
 
@@ -55,7 +55,7 @@
         
         <!-- Welcome message and player name entry -->
         <div id="welcome"><h2>Welcome to</h2>
-            <h1>Way of the Frog!</h1>
+            <h2>Way of the Frog!</h2>
             <h3>You role will be Follower of the Frog.  Enter your name follower</h3>
             <span><input type="text" id="name" value="Player Name"></span>  
             <span><input type="submit" id="submit-name"></span> 
