updated media query

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <h1>Way of the Frog!</h1>
         </div>
 
+    </header>
+
+    <div class="container">
 
         <div id="score-container">
             <div class="scores">
@@ -25,13 +28,8 @@
             </div>  
         </div>
 
-    </header>
 
-    <div class="container">
-
-
-
-        <img src=" assets/images/pond-background.jpg" alt="Cartoon pond background">
+        <img id="back-img" src=" assets/images/pond-background.jpg" alt="Cartoon pond background">
         <div id="frog0" class="frog"><img src="assets/images/green_froggy.png" alt="Green frog">
             <audio src="assets/audio/greytree-frog.mp3"></audio>
         </div>
