added rules div

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div id="listen"><h2>Listen to the way of the frog</h2> </div>
 
         <!-- Message hidden until JS unhides while player enters response  -->
-        <div id="follow"><h2>Follow the way of the frog</h2> </div>
+        <div id="follow"><h2>Follow the Way of the Frog</h2> </div>
 
         <!-- 100% width empty invisible div that covers frog divs
         when frog sequence is playing to prevent player activating 
@@ -69,6 +69,17 @@
         <!-- Hidden div that is displayed after game is over. JS populates different 
         messages depending on the player's score -->
         <div id="game-over"></div>
+
+        <div id="rules">
+            <h2>Game Rules</h2>
+            <p>The aim of the game is to listen to the order that the frogs ribbit to you.  This will start off easy with a random sequence of 3.  This should present no problems, even to a novice Follower of the Frog!  Pay attention becuase it's going to get harder!</p>
+            <p>Next you will see a message at the top of the screen to "Follow the Way of the Frog".  Now it is for you, the Follower, to play back the sequence you have just listened to.  You will add a point to your score for every frog you get in the correct order.</p>
+            <p>Once you have successfully completed this round, the sequence will play back again in the same order but will add a new frog to the end makin it 4. 
+            </p>
+            <p>Practice makes perfect! Keep improving your High Score and you will soon be on your way to becoming a Master Follower of the Frog!</p>
+
+            <h3>Good fortune Follower, may the Frog be with you!</h3>
+        </div>
 
         <!-- menu box -->
         <div id="menu-container">
