--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="a fun frog memory game">
     <meta name="keywords" content="game, frog, memory, fun, cartoon">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <!-- linked style sheet-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- linked tab icon file -->
