--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="a fun frog memory game">
     <meta name="keywords" content="game, frog, memory, fun, cartoon">
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+
     <!-- linked style sheet-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- linked tab icon file -->
@@ -29,10 +29,10 @@
         <!-- scores are updated by JS -->
         <div id="score-container">
             <div class="scores">
-                <h2>High Score <span class="counters"id="high-score-count">0</span><h2>
+                <h2>High Score <span class="counters" id="high-score-count">0</span> </h2>
             </div>
             <div class="scores">
-                <h2>Score <span class="counters" id="score-count">0</span><h2>
+                <h2>Score <span class="counters" id="score-count">0</span> </h2>
             </div>  
         </div>
 
@@ -95,9 +95,9 @@
             <h2>Welcome to the Game!</h2>
 
 
-                <button class="btn" data-type="play"><h3>Play Game!</h3></button>
+                <button class="btn" data-type="play">Play Game!</button>
 
-                <button class="btn" data-type="rules"><h3>Game Rules</h3></button>
+                <button class="btn" data-type="rules">Game Rules</button>
 
 
         </div>
@@ -105,7 +105,7 @@
     </div>
 
     <!-- linked javascript file -->
-    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <!-- link to howl audio library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
