changed images to webp format to improve performance

--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
         </div>
 
         <!-- Background image for game play -->
-        <img id="back-img" src=" assets/images/pond-background.jpg" alt="Cartoon pond background">
+        <img id="back-img" src=" assets/images/pond-background.webp" alt="Cartoon pond background">
 
         <!-- a series of divs containing different colored frog images
         that are activated either when game sequences is played or by
         the player interacting with images -->
-        <div id="frog0" class="frog"><img src="assets/images/green_froggy.png" alt="Green frog">
+        <div id="frog0" class="frog"><img src="assets/images/green_froggy.webp" alt="Green frog">
             <audio src="assets/audio/greytree-frog.mp3"></audio>
         </div>
 
-        <div id="frog1" class="frog"><img src="assets/images/blue_froggy.png" alt="Blue frog">
+        <div id="frog1" class="frog"><img src="assets/images/blue_froggy.webp" alt="Blue frog">
             <audio src="assets/audio/medium-frog.mp3"></audio>
         </div>
 
-        <div id="frog2" class="frog"><img src="assets/images/red_froggy.png" alt="Red frog">     
+        <div id="frog2" class="frog"><img src="assets/images/red_froggy.webp" alt="Red frog">     
             <audio src="assets/audio/small-frog.mp3"></audio> 
         </div>
 
-        <div id="frog4" class="frog"><img src="assets/images/pink_froggy.png" alt="Pink frog">
+        <div id="frog4" class="frog"><img src="assets/images/pink_froggy.webp" alt="Pink frog">
             <audio src="assets/audio/leopard-frog.mp3"></audio> 
         </div>
 
-        <div id="frog3" class="frog"><img src="assets/images/yellow_froggy.png" alt="Yellow frog">
+        <div id="frog3" class="frog"><img src="assets/images/yellow_froggy.webp" alt="Yellow frog">
             <audio src="assets/audio/tree-frog.mp3"></audio>     
         </div>
 
